# CAPI_Test

./: .gitignore  CAPI_Test.slnx  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  README.md  build_wsl.sh  clean-all.ps1
.github/: copilot-instructions.md
CPPTest/: CPPTest.cpp  CPPTest.vcxproj  history.txt
CSharpTest/: CSharpTest.csproj  CalculatorNativeMethods.cs  Program.cs  SobelNativeMethods.cs
CalculatorDLL/: CalculatorDLL.vcxproj  CalculatorDLL.vcxproj.filters  calculator.cpp  calculator.h
Knowledge/: C-C++ Calling Convention Guide.md  CMakeLists.md  CMakePreset.md  Callee vs Caller.md  Compilier.md  Extern C.md  Manus_PPT_Prompt.md  Opaque Patterns in C-C++ - Types, Pointers, and API Design.md  Progress.md  What is Application Binary Interface(ABI).md  how to detect binary abi.md
Knowledge/Hidden Knowledge/: C++ Class.md  What is STL.md  single-header library.md
SobelDLL/: SobelDLL.vcxproj  SobelDLL.vcxproj.filters  sobel.cpp  sobel.h
cmake/: generate_version_h.ps1  generate_version_rc.ps1  version.h.in  version.rc.in
